--- a/configs/run.yaml
+++ b/configs/run.yaml
@@ -36,9 +36,14 @@ warmup_ratio:
   value: 0.0
 early_stopping_patience:
   value: 200
-num_epochs:
+# num_epochs:
+#   value: 1
+max_steps:
   value: 200
+
 batch_size:
-  value: 4
+  value: 32
 max_grad_norm:
   value: 5.0
+eval_steps:
+  value: 100
