--- a/configs/run.yaml
+++ b/configs/run.yaml
@@ -1,23 +1,25 @@
 datasets:
   value:
-      - [turbulent_radiative_layer_2D, 8]
-      # - [cylinder_flow_water, 481]
-      # - [cylinder_pipe_flow_water, 481]
-      # - [object_periodic_flow_water, 481]
-      # - [object_sym_flow_water, 481]
-      # - [heated_object_pipe_flow_air, 481]
-      # - [cooled_object_pipe_flow_air, 481]
-      # - [rayleigh_benard_obstacle, 1001]
-      # - [twophase_flow, 401]
-      # - [rayleigh_benard, 200]
-      # - [shear_flow, 200]
-      # - [euler_multi_quadrants_periodicBC, 100]
+      # - [turbulent_radiative_layer_2D, 101]
+      - [cylinder_sym_flow_water, 481]
+      - [cylinder_pipe_flow_water, 481]
+      - [object_periodic_flow_water, 481]
+      - [object_sym_flow_water, 481]
+      - [object_sym_flow_air, 481]
+
+      - [heated_object_pipe_flow_air, 481]
+      - [cooled_object_pipe_flow_air, 481]
+      - [rayleigh_benard_obstacle, 1001]
+      - [twophase_flow, 401]
+      - [rayleigh_benard, 200]
+      - [shear_flow, 200]
+      - [euler_multi_quadrants_periodicBC, 100]
 
 num_channels:
-  value: 4
+  value: 5
 
 model_name:
-  value: "T"
+  value: "B" # T, B
 lr:
   value: 0.00005
 lr_embedding_recovery:
@@ -46,7 +48,7 @@ max_stride:
   value: 8
 
 batch_size:
-  value: 32
+  value: 64 #4=6gb
 max_grad_norm:
   value: 5.0
 eval_steps:
