--- a/configs/run.yaml
+++ b/configs/run.yaml
@@ -52,6 +52,8 @@ max_stride:
   value: 8
 
 batch_size:
-  value: 16 #4=6gb
+  value: 128 #4=6gb
+num_workers:
+  value: 16
 max_grad_norm:
   value: 5.0
