--- a/configs/run.yaml
+++ b/configs/run.yaml
@@ -1,19 +1,19 @@
 datasets:
   value:
-      # - [turbulent_radiative_layer_2D, 101]
-      - [cylinder_sym_flow_water, 481]
-      - [cylinder_pipe_flow_water, 481]
-      - [object_periodic_flow_water, 481]
-      - [object_sym_flow_water, 481]
-      - [object_sym_flow_air, 481]
+      - [turbulent_radiative_layer_2D, 101]
+      # - [cylinder_sym_flow_water, 481]
+      # - [cylinder_pipe_flow_water, 481]
+      # - [object_periodic_flow_water, 481]
+      # - [object_sym_flow_water, 481]
+      # - [object_sym_flow_air, 481]
 
-      - [heated_object_pipe_flow_air, 481]
-      - [cooled_object_pipe_flow_air, 481]
-      - [rayleigh_benard_obstacle, 1001]
-      - [twophase_flow, 401]
-      - [rayleigh_benard, 200]
-      - [shear_flow, 200]
-      - [euler_multi_quadrants_periodicBC, 100]
+      # - [heated_object_pipe_flow_air, 481]
+      # - [cooled_object_pipe_flow_air, 481]
+      # - [rayleigh_benard_obstacle, 1001]
+      # - [twophase_flow, 401]
+      # - [rayleigh_benard, 200]
+      # - [shear_flow, 200]
+      # - [euler_multi_quadrants_periodicBC, 100]
 
 num_channels:
   value: 5
@@ -42,7 +42,7 @@ early_stopping_patience:
 max_steps:
   value: 1000000
 eval_steps:
-  value: 20000
+  value: 50
 
 img_size:
   value: 128
@@ -52,7 +52,7 @@ max_stride:
   value: 8
 
 batch_size:
-  value: 128 #4=6gb
+  value: 4 #4=6gb
 num_workers:
   value: 16
 max_grad_norm:
