--- a/configs/eval_novel.yaml
+++ b/configs/eval_novel.yaml
@@ -1,23 +1,23 @@
 datasets:
-  - [cylinder_sym_flow_water, 481]
-  - [cylinder_pipe_flow_water, 481]
-  - [object_periodic_flow_water, 481]
-  - [object_sym_flow_water, 481]
-  - [object_sym_flow_air, 481]
+  # - [cylinder_sym_flow_water, 481]
+  # - [cylinder_pipe_flow_water, 481]
+  # - [object_periodic_flow_water, 481]
+  # - [object_sym_flow_water, 481]
+  # - [object_sym_flow_air, 481]
 
-  - [heated_object_pipe_flow_air, 481]
-  - [cooled_object_pipe_flow_air, 481]
-  - [rayleigh_benard_obstacle, 1001]
-  - [twophase_flow, 401]
-  - [rayleigh_benard, 200]
-  - [shear_flow, 200]
-  - [euler_multi_quadrants_periodicBC, 100]
+  # - [heated_object_pipe_flow_air, 481]
+  # - [cooled_object_pipe_flow_air, 481]
+  # - [rayleigh_benard_obstacle, 1001]
+  # - [twophase_flow, 401]
+  # - [rayleigh_benard, 200]
+  # - [shear_flow, 200]
+  # - [euler_multi_quadrants_periodicBC, 100]
 
 
-  # - [supersonic_flow, 101]
-  # - [turbulent_radiative_layer_2D, 101]
-  # - [open_obj_water, 481]
-  # - [euler_multi_quadrants_openBC, 100]
+  - [supersonic_flow, 101]
+  - [turbulent_radiative_layer_2D, 101]
+  - [open_obj_water, 481]
+  - [euler_multi_quadrants_openBC, 100]
 
 num_channels: 5
 
